syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "net.atos.daf.ct2.datacleanupservice";

package datacleanupservice;

service DataCleanupService {
  rpc DeleteDataFromTables (google.protobuf.Empty) returns (CleanDataResponse);
  
}

enum ResponseCode{
  None = 0;
  Success = 200;
  Failed = 400;
  Conflict = 409;
  NotFound = 404;
  InternalServerError = 500;
}

message CleanDataResponse {
  ResponseCode Code = 2;
}

    message DataPurgingTableLog 
    {      
         int32 Id =1;
         int32 DataPurgingServiceLogId =2;
         int32 DataPurgingTableId =3;
         int64 PurgingStartTime =4;
         int64 PurgingEndTime =5;
         int32 NoOfDeletedRecords=6;
         int64 CreatedAt =7;
    }
      message DataPurgingServiceLog
    {
         int32 Id =1;
         string ServiceName =2;
         int64 ExecutionStartTime =3;
         int64 ExecutionEndTime =4;
         int64 CreatedAt =5;
    }